add ping route
