# docs/swagger.json
@@ -9,6 +9,29 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
+        "/ping": {
+            "get": {
+                "description": "Ping",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Ping"
+                ],
+                "summary": "Ping",
+                "responses": {
+                    "200": {
+                        "description": "pong",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/scan/movie": {
             "post": {
                 "description": "Scan movies from the configured folder",
