# internal/controllers/root.go
@@ -24,4 +24,5 @@ func InitRouter(engine *gin.Engine, db *gorm.DB, env initializers.Env) {
 	features.ScheduleScanner(env.ScanCron, movieScanner, tvScanner)
 	InitScanController(mediaIndexerGroup.Group("/scan"), movieScanner, tvScanner)
 	InitUploadController(mediaIndexerGroup.Group("/upload"), mediaUploader)
+	InitPingController(mediaIndexerGroup.Group("/ping"))
 }
